[tool.poetry]
name = "ppap"
version = "0.1.0"
description = "File encryption utility using a GitHub public key."
authors = ["sumeshi <j15322sn@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pycryptodome = "^3.9.8"
pyminizip = "^0.2.4"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
mypy = "^0.782"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
