[tool.poetry]
name = "ppapzip"
version = "1.0.1"
description = "File encryption/decryption utility using RSA key"
authors = ["sumeshi <j15322sn@gmail.com>"]
license = "MIT"
readme = "README.md"

repository = "https://github.com/sumeshi/ppap"
homepage = "https://github.com/sumeshi/ppap"

keywords = ['zip', 'RSA']

[tool.poetry.scripts]
ppap = 'ppapzip:ppap'

[tool.poetry.dependencies]
python = "^3.8"
pycryptodome = "^3.9.8"
pyminizip = "^0.2.4"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
mypy = "^0.782"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
